Fixed spacing

--- a/css/popframe.webflow.css
+++ b/css/popframe.webflow.css
@@ -493,7 +493,7 @@ a {
 
 .link-block {
   margin-top: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 120px;
 }
 
 .galleryimage {
